message IdentityEvent {
    oneof event_kind {
        Inception inception = 1;
        Mutation mutation = 2;
        Recover recover = 3;
    }
}

/* Identity inception model*/
message Inception {
    bytes root_next_pk_hash = 1; // MultiKeyHash of next public key(Winternitz)
    bytes owner_next_pk_hash = 2; // MultiKeyHash of next public key(ed25519)
    bytes sdt_proof = 3; // MultiHash of trie root
}

message Mutation {
    bytes payload = 1;  // Encoded bytes of mutation payload(It is encoded because of deterministic event_id and signature)
    bytes signature = 2;  // Signature of payload bytes(signed with owner pk)
}

message MutationPayload {
    bytes owner_pk = 1; // Raw signer public key 
    bytes owner_next_pk_hash = 2; // MultiHash digest of next public key
    bytes sdt_proof = 3; // MultiHash of credentials
}

message Recover {
    bytes root_pk = 1; // Raw signer public key 
    bytes root_next_pk_hash = 2; // MultiHash digest of next public key
    bytes owner_next_pk_hash = 3; // MultiHash of trie root
}
